[gd_scene load_steps=5 format=2]

[ext_resource path="res://bin/gdemu.gdns" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]

[sub_resource type="AudioStreamGenerator" id=1]
mix_rate = 62500.0
buffer_length = 0.05

[node name="Main" type="Node"]
script = ExtResource( 3 )

[node name="Emulator" type="Sprite" parent="."]
process_priority = 3
texture = ExtResource( 2 )
centered = false
script = ExtResource( 1 )

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Drive1Access" type="ColorRect" parent="Control"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -12.0
margin_right = -48.0
margin_bottom = -4.0
color = Color( 1, 0, 0, 0.501961 )

[node name="Drive2Access" type="ColorRect" parent="Control"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -24.0
margin_top = -12.0
margin_right = -8.0
margin_bottom = -4.0
color = Color( 1, 0, 0, 0.501961 )
